# samia

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  NOTICE  README.md  install.sh  pyproject.toml  test_fresh_install.sh
.github/workflows/: tests.yml
benchmarks/: BENCHMARK_DESIGN_v1.md  REPORT.md  SAMIA_BENCHMARK_COMPENDIUM_2026-06-13.md  SAMIA_BENCHMARK_EXECUTIVE_SUMMARY.md  __init__.py  run_benchmark.py  score.py  smoke_adapter.py
benchmarks/adapters/: __init__.py  base.py  samia_adapter.py
benchmarks/charts/: make_charts.py
benchmarks/data/: SHA256SUMS
benchmarks/data/a1_retrieval/: SHA256SUMS  dataset.json  generate.py
benchmarks/data/a2_retention/: SHA256SUMS  dataset.json  generate.py
benchmarks/data/a3_temporal/: SHA256SUMS  dataset.json  generate.py
benchmarks/data/a4_contradiction/: SHA256SUMS  cases.jsonl  generate.py  score.py
benchmarks/data/a5_consolidation/: SHA256SUMS  dataset.json  generate.py
benchmarks/data/a6_associative/: SHA256SUMS  dataset.json  generate.py
benchmarks/repro/: Dockerfile  seeds.toml
benchmarks/results/: a1_retrieval.json  raw_a1_retrieval.jsonl  raw_a2_retention.jsonl  raw_a3_temporal.json  raw_a3_temporal.jsonl  raw_a4_contradiction.jsonl  raw_a5_consolidation.jsonl  raw_a6_associative.jsonl  raw_a7_distill.jsonl  raw_a8_provenance.jsonl  raw_a9_latency.jsonl  scores.json  scores_a5_consolidation.json  scores_a9.json
benchmarks/tasks/: a1_retrieval.py  a2_retention.py  a3_temporal.py  a4_contradiction.py  a5_consolidation.py  a6_associative.py  a7_distill.py  a8_provenance.py  a9_latency.py
examples/: README.md  quickstart.py
samia/: __init__.py  _install_probe.py  cli.py  mcp_server_main.py
samia/core/: __init__.py  atomic_state.py  attention.py  audit.py  auditor.py  bio.py  chain.py  consolidation.py  context_extension.py  entity_index.py  fact_extractor.py  frontmatter.py  gates.py  hebbian_health.py  hippocampus.py  ia.py  integrity.py  judge.py  mcp_server.py  merge_consumer.py  netconsent.py  paths.py  runtime_warrior.py  semantic_recall.py  spine_cord.py  successor.py  temporal.py  temporal_distinctiveness.py  temporal_recall_sith.py  temporal_recall_stc.py  temporal_substrate.py  test_anchor_capture_write_path.py  test_bio.py  test_consolidation_surfacer.py  test_directed_sr.py  test_embed_model_selection.py  test_fact_extract_producer.py  test_forget_node.py  test_hippocampus.py  test_integrity.py  (+28 more)
samia/core/bio/: config.py  (+13 more)
samia/runtime/: __init__.py  bug_records.py  client.py  contradiction.py  inference.py  ipc.py  maintenanced.py  memory_guard.py  model_fetch.py  rem_cycle.py  rem_subscribers.py  scheduler.py  sleep_pressure.py  test_contradiction.py  test_contradiction_tuning.py  test_inference.py  test_maintenanced.py  test_memory_guard_live_isolation.py  test_model_fetch.py  test_passive_sweep.py  test_rem_cycle.py  test_rem_subscribers.py  test_semantic_threshold.py  test_supersession.py  watcher.py
(+71 files in other folders)
